# Codemate

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  orchestrator.py  prompts.py
agent/tools/: __init__.py  summarizer.py
api/: dependencies.py  main.py
api/routes/: __init__.py  health.py  ingest.py  query.py  report.py  summarize.py
api/schemas/: __init__.py  base.py  ingest.py  query.py  report.py  summarize.py
codex/: __init__.py  config.py  context.py  logging.py
configs/: dev.yaml  prod.yaml
data/samples/papers/: sample_doc.txt
docs/: ARCHITECTURE.md
infra/: README.md  docker-compose.yml
infra/grafana/dashboards/: codex-overview.json
ingestion/: __init__.py  pipeline.py  run.py
ingestion/loaders/: pdf.py  text.py
ingestion/splitters/: text.py
ingestion/workers/: embedder.py
reporting/: __init__.py  renderer.py
reporting/templates/: report.html.j2  report.md.j2
retriever/: __init__.py  compression.py  hybrid.py  types.py
retriever/clients/: __init__.py  qdrant.py  utils.py
retriever/rankers/: __init__.py  heuristic.py
tests/e2e/: test_placeholder.py
tests/unit/: test_api.py  test_orchestrator.py
